# tiho_the_game

./: .gitignore  Animation.cpp  Animation.h  CMakeLists.txt  Car.cpp  Car.h  Car.hpp  Entity.cpp  Entity.h  Entity.hpp  Tank.cpp  Tank.h  main.cpp  main.cxx  readme.md  readme.txt
IObject/: IObject.cpp  IObject.hpp
src/: main.cpp
src/Animation/: Animation.cpp  Animation.hpp  BuildingAnimation.cpp  BuildingAnimation.hpp  CharacterAnimation.cpp  CharacterAnimation.hpp  ExplosionAnimation.cpp  ExplosionAnimation.hpp
src/Building/: ArsenalBuilding.cpp  ArsenalBuilding.hpp  Building.cpp  Building.hpp  CannonBuilding.cpp  CannonBuilding.hpp  FactoryBuilding.cpp  FactoryBuilding.hpp  GeneratorBuilding.cpp  GeneratorBuilding.hpp  LaboratoryBuilding.cpp  LaboratoryBuilding.hpp  MainBaseBuilding.cpp  MainBaseBuilding.hpp  MineBuilding.cpp  MineBuilding.hpp  NuclearSiloBuilding.cpp  NuclearSiloBuilding.hpp  OilDerrickBuilding.cpp  OilDerrickBuilding.hpp
src/Building/Commands/: BuildingCommand.cpp  BuildingCommand.hpp  CreateBuildingCommand.cpp  CreateBuildingCommand.hpp  DestroyBuildingCommand.cpp  DestroyBuildingCommand.hpp
src/Character/: Car.cpp  Car.hpp  Entity.cpp  Entity.hpp  NuclearRocket.cpp  NuclearRocket.hpp  SpitFire.cpp  SpitFire.hpp  Tank.cpp  Tank.hpp  Worker.cpp  Worker.hpp
src/Character/Commands/: AttackCommand.cpp  AttackCommand.hpp  DestroyCommand.cpp  DestroyCommand.hpp  GoCommand.cpp  GoCommand.hpp  HoldPositionCommand.cpp  HoldPositionCommand.hpp  PatrolCommand.cpp  PatrolCommand.hpp  RepairCommand.cpp  RepairCommand.hpp  StopCommand.cpp  StopCommand.hpp  UnitCommand.cpp  UnitCommand.hpp  UnitCommandsManager.cxx  UnitCommandsManager.hxx
src/Character/Factory/: CarFactory.cpp  CharacterFactory.cpp  CharacterFactory.hpp  TankFactory.cpp
src/Cursor/: Cursor.cpp  Cursor.hpp
src/Entity/: Car.cpp  Entity.cpp  Entity.hpp  Tank.cpp  Tank.hpp
src/Explosion/: Explosion.cpp  Explosion.hpp
src/Factory/: CarFactory.cpp  CarFactory.hpp  CharacterFactory.hpp  TankFactory.cpp  TankFactory.hpp
src/Game/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  LostState.cpp  LostState.hpp  MenuState.cpp  MenuState.hpp  PlayingState.cpp  PlayingState.hpp  WonState.cpp  WonState.hpp
src/IObject/: IObject.cpp  IObject.hpp
src/Logger/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  Logger.cpp  Logger.hpp  LoggerImpl.cpp  LoggerImpl.hpp  SocketLogger.cpp  SocketLogger.hpp
src/Map/: Map.cpp  Map.hpp
src/Resource/: Energy.cpp  Energy.hpp  Iron.cpp  Iron.hpp  Oil.cpp  Oil.hpp  Resource.hpp
src/ResourceHolder/: ResourceHolder.hpp
src/TextureHolder/: TextureHolder.cpp  TextureHolder.hpp
src/images/gimp/: 64PixelMapTemplate.xcf  FourCellTemplate.xcf  OneCellTemplate.xcf  TwoCellTemplate.xcf
